<resources>
    <string name="app_name">DopaTox</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome back! Stay in control of your screen time.</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="recovery_password">Recovery Password</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_with_google">Sign in with google</string>
    <string name="don_t_have_account">Don’t have account ?</string>
    <string name="sign_up">Sign Up</string>
    <string name="start_your_journey">Start your journey to a healthier digital life!</string>
    <string name="name">Name</string>
    <string name="create_account">Create Account</string>
    <string name="enter_the_email">Enter the email address associated with your account, and we\'ll email you a link to reset your password</string>
    <string name="Continue">Continue</string>
    <string name="permission_access">Enable access for\nDOPATOX</string>
    <string name="skip">Skip</string>
    <string name="usage_permission">Usage access</string>
    <string name="usage_content">To help you track and manage your screen time effectively, Digital Detox requires usage access.</string>
    <string name="display_permission">Display Over The Apps</string>
    <string name="display_content">Allows Digital Detox to show helpful reminders and interventions while using other apps</string>
    <string name="background_permission">Run in Background</string>
    <string name="background_content">Allow Digital Detox to run in the background to track screen time and apply smart interventions without interruptions.</string>
    <string name="success">Success</string>
    <string name="usage_permission_granted">Usage Permission granted</string>
    <string name="display_over_permission_granted">Display over permission granted</string>
    <string name="stats">Stats</string>
    <string name="challenges">Challenges</string>
    <string name="home">Home</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="welcome">Welcome Back</string>
    <string name="today_s_screen_time">Today\'s Screen Time</string>
    <string name="set_daily_limits">Set Daily Limits</string>
    <string name="hr">hr</string>
    <string name="min">min</string>
    <string name="most_used_applications">Most used applications</string>
    <string name="error">ERROR</string>
    <string name="warning">WARNING</string>
    <string name="no_limit">No Limit</string>
    <string name="limit_set_to">"Limit set to "</string>
    <string name="screen_time_limit">Screen Time Limit</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="profile">Profile</string>
    <string name="badges">Badges</string>
    <string name="User">Abdallah Elsobky</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="daily_avrages_usage">Daily Avrages Usage</string>
    <string name="weekly_avrages_usage">Weekly Avrages Usage</string>
    <string name="yearly_avrages_usage">Yearly Avrages Usage</string>
    <string name="log_out">LOG OUT</string>
    <string name="last_badges">Last Badges</string>
    <string name="achievements">Achievements</string>
    <string name="account">Account</string>
    <string name="notifications">Notifications</string>
    <string name="theme">Theme</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="title">Title</string>
    <string name="dark">Dark Mode</string>
</resources>