<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/statsFragment"
        android:icon="@drawable/ic_stats"
        android:title="@string/stats"
        />
    <item
        android:id="@+id/challengesFragment"
        android:icon="@drawable/ic_challenge"
        android:title="@string/challenges"
        />
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:checked="true"
        android:title="@string/home"
        />
    <item
        android:id="@+id/chatFragment"
        android:icon="@drawable/ic_chat"
        android:title="@string/chat"
        />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings"
        />
</menu>